--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.0.0",
     "pino": "^8.0.0",
-    "pino-http": "^9.0.0"
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
