--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "@pinecone-database/pinecone": "^2.0.1",
+    "cosine-similarity": "^1.0.1",
+    "csv-parse": "^5.5.3",
     "docxtemplater": "^3.44.0",
     "dotenv": "^16.4.1",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "gcp-metadata": "^6.0.0",
