Bank Ombudsman letter  (#1)
* docker build changes

* added webhook API from Abhijeet

* new seprate function to create Doc

* QnA issue resolved

* all flows in single function

* clean json before forwarding to API

* completion API with fine tuned model ATM fraud bank letter

* show download only after file genrated

* Obudsman letter with GPT3.5

* Leagla training and pramaters updated'

* package.json update

* updated Obudsman prompt and para with GPT4

---------

Co-authored-by: Chetan <chetan@equaljustice.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,14 @@
 # Exclude locally installed dependencies
 node_modules/
 npm-debug.log
-
+.env
 # Exclude local IDE settings
 .idea/
 .vscode/
 
 # macOS
 **/.DS_Store
+testingThread.docx
+thread_**
+emboutput.csv
+localtestingchetan.docx
