--- a/package.json
+++ b/package.json
@@ -9,23 +9,34 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "NODE_ENV=development nodemon index.js | pino-pretty",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint --ext *.js --ext test/*.js",
     "fix": "eslint --fix --ext *.js --ext test/*.js",
-    "build-image": "gcloud builds submit --pack image=us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/samples/microservice-template:manual",
-    "deploy": "gcloud run deploy microservice-template --image us-central1-docker.pkg.dev/$GOOGLE_CLOUD_PROJECT/samples/microservice-template:manual --region us-central1",
+    "build-image": "gcloud builds submit --pack image=asia-south1-docker.pkg.dev/atmprebuiltagent/cloud-run-source-deploy:manual",
+    "deploy": "gcloud run deploy microservice-template --image asia-south1-docker.pkg.dev/atmprebuiltagent/cloud-run-source-deploy:manual --region asia-south1",
     "test": "mocha test/app.test.js --check-leaks",
     "system-test": "mocha test/system.test.js --timeout=180000"
   },
   "author": "Google LLC",
   "license": "Apache-2.0",
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
+    "@pinecone-database/pinecone": "^2.0.1",
+    "cosine-similarity": "^1.0.1",
+    "csv-parse": "^5.5.3",
+    "docxtemplater": "^3.44.0",
+    "dotenv": "^16.4.1",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.0.0",
+    "openai": "^4.26.0",
+    "path": "^0.12.7",
     "pino": "^8.0.0",
     "pino-http": "^9.0.0",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "pizzip": "^3.1.6"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
