--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "bcryptjs": "^2.4.3",
     "cosine-similarity": "^1.0.1",
     "csv-parse": "^5.5.3",
     "docxtemplater": "^3.46.0",
@@ -29,6 +30,7 @@
     "fs": "^0.0.2",
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.6.3",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.28.4",
     "path": "^0.12.7",
     "pino": "^8.19.0",
