--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.4",
     "openai": "^4.28.4",
     "path": "^0.12.7",
     "pino": "^8.19.0",
