--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "@infobip-api/sdk": "^0.3.2",
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "cosine-similarity": "^1.0.1",
     "csv-parse": "^5.5.3",
@@ -29,10 +31,12 @@
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
-    "openai": "^4.28.4",
+    "openai": "^4.56.0",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "pino": "^8.19.0",
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
