--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "dependencies": {
+    "@google-cloud/dialogflow": "^6.8.0",
+    "@google-cloud/dialogflow-cx": "^4.8.0",
     "@google-cloud/storage": "^7.7.0",
     "@infobip-api/sdk": "^0.3.2",
     "axios": "^1.7.4",
@@ -26,7 +28,7 @@
     "csv-parse": "^5.5.3",
     "docxtemplater": "^3.46.0",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^5.0.0",
     "fs": "^0.0.2",
     "gcp-metadata": "^6.0.0",
     "google-auth-library": "^9.6.3",
