send file if available

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "NODE_ENV=development nodemon index.js",
+    "dev": "nodemon -r dotenv/config ./index.js",
     "build-image": "gcloud builds submit --pack image=asia-south1-docker.pkg.dev/atmprebuiltagent/cloud-run-source-deploy:manual",
     "deploy": "gcloud run deploy microservice-template --image asia-south1-docker.pkg.dev/atmprebuiltagent/cloud-run-source-deploy:manual --region asia-south1",
     "test": "mocha test/app.test.js --check-leaks",
