--- a/package.json
+++ b/package.json
@@ -39,16 +39,18 @@
     "openai": "^4.56.0",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
-    "pino": "^8.19.0",
-    "pino-http": "^9.0.0",
+    "pino": "^9.0.0",
+    "pino-http": "^10.0.0",
     "pino-pretty": "^10.3.1",
     "pizzip": "^3.1.6",
     "redis": "^4.7.0"
   },
   "devDependencies": {
+    "eslint": "^9.0.0",
+    "eslint-config-google": "^0.14.0",
     "got": "^14.0.0",
     "mocha": "^10.3.0",
     "nodemon": "^3.1.4",
-    "supertest": "^6.1.3"
+    "supertest": "^7.0.0"
   }
 }
